crates/kirin-derive-core-3/src/kirin/field/snapshots/kirin_derive_core_3__kirin__field__tests__enum_wraps.snap
---
source: crates/kirin-derive-core-3/src/kirin/field/tests.rs
expression: "case!\n{\n    #[wraps] #[kirin(fn, type_lattice = T)] pub enum StructuredControlFlow<T:\n    TypeLattice> { If(If<T>), For(For<T>), }\n}"
---
#[automatically_derived]
impl<'a, T: TypeLattice> kirin::ir::HasArguments<'a> for StructuredControlFlow<T> {
    type Iter = StructuredControlFlowArgumentsIter<T>;
    fn arguments(&'a self) -> Self::Iter {
        match self {
            Self::If(field_0) => {
                StructuredControlFlowArgumentsIter::If(<If<T> as HasArguments>::arguments(field_0))
            }
            Self::For(field_0) => StructuredControlFlowArgumentsIter::For(
                <For<T> as HasArguments>::arguments(field_0),
            ),
        }
    }
}
#[automatically_derived]
pub enum StructuredControlFlowArgumentsIter<T: TypeLattice> {
    If(<If<T> as HasArguments>::Iter),
    For(<For<T> as HasArguments>::Iter),
}
#[automatically_derived]
impl<T: TypeLattice> Iterator for StructuredControlFlowArgumentsIter<T> {
    type Item = &'a kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::If(inner) => inner.next(),
            Self::For(inner) => inner.next(),
        }
    }
}
#[automatically_derived]
impl<'a, T: TypeLattice> kirin::ir::HasArgumentsMut<'a> for StructuredControlFlow<T> {
    type IterMut = StructuredControlFlowArgumentsMutIter<T>;
    fn arguments_mut(&'a mut self) -> Self::IterMut {
        match self {
            Self::If(field_0) => StructuredControlFlowArgumentsMutIter::If(
                <If<T> as HasArgumentsMut>::arguments_mut(field_0),
            ),
            Self::For(field_0) => StructuredControlFlowArgumentsMutIter::For(
                <For<T> as HasArgumentsMut>::arguments_mut(field_0),
            ),
        }
    }
}
#[automatically_derived]
pub enum StructuredControlFlowArgumentsMutIter<T: TypeLattice> {
    If(<If<T> as HasArgumentsMut>::IterMut),
    For(<For<T> as HasArgumentsMut>::IterMut),
}
#[automatically_derived]
impl<T: TypeLattice> Iterator for StructuredControlFlowArgumentsMutIter<T> {
    type Item = &'a mut kirin::ir::SSAValue;
    fn next(&mut self) -> Option<Self::Item> {
        match self {
            Self::If(inner) => inner.next(),
            Self::For(inner) => inner.next(),
        }
    }
}
